source/_assets/scss/pages/index.scss
/* ... */
div.graph a p span.date::before {
	content: " ";
}
div.graph a p span.date {
	font-weight: 500;
	color: hsl(0, 0%, 47%);
	white-space: nowrap;
}
div.graph a p span.level {
	color: #30d079;
}

div.test {
	margin-left: 20px;
	position: absolute;
	margin-top: -250px;
}
div.test img {
	width: 150px;
	height: 180px;
	object-fit: cover;
	border-radius: 9px;
	border: 2px solid rgba(255, 255, 255, 0.9);
	box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
}
div.test p {
	font-size: 0.8em;
	width: 150px;
	padding: 2px 5px 0;
	background: hsl(0, 0%, 97%);
	color: #1b1b1b;
	border-radius: 7px;
	margin-top: 2px;
	box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
}
div.test p span.date {
	font-weight: 500;
	color: hsl(0, 0%, 47%);
}

/* Load Animation
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
@keyframes color-in {
	0% {background-color: var(--masthead-offset); filter: brightness(110%) opacity(70%);}
	55% {background-color: #1ca6ff; filter: opacity(40%);}
	100% {background-color: var(--masthead-offset);}
}

div.graph > div.flex > div > a:nth-of-type(1) {
	animation-name: color-in;
	animation-duration: var(--animation-time);
	animation-delay: calc(var(--animation-delay) * 1);
}
div.graph > div.flex > div > a:nth-of-type(2) {
	animation-name: color-in;
	animation-duration: var(--animation-time);
	animation-delay: calc(var(--animation-delay) * 2);
}
div.graph > div.flex > div > a:nth-of-type(3) {
	animation-name: color-in;
	animation-duration: var(--animation-time);
	animation-delay: calc(var(--animation-delay) * 3);
}
div.graph > div.flex > div > a:nth-of-type(4) {
	animation-name: color-in;
	animation-duration: var(--animation-time);
	animation-delay: calc(var(--animation-delay) * 4);
}
div.graph > div.flex > div > a:nth-of-type(5) {
	animation-name: color-in;
	animation-duration: var(--animation-time);
	animation-delay: calc(var(--animation-delay) * 5);
}
div.graph > div.flex > div > a:nth-of-type(6) {
	animation-name: color-in;
	animation-duration: var(--animation-time);
	animation-delay: calc(var(--animation-delay) * 6);
}
div.graph > div.flex > div > a:nth-of-type(7) {
	animation-name: color-in;
	animation-duration: var(--animation-time);
	animation-delay: calc(var(--animation-delay) * 7);
}
/* Timeline Block [End] */


/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
The Sentence
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
article.sentence {
	text-align: center;
	display: flex;
	flex-direction: column;
	align-items: center;
	margin: 0 0;
	padding-top: clamp(40px, 10vh, 90px);
	padding-bottom: clamp(40px, 10vh, 90px);
	padding-left: 10px;
	padding-right: 10px;
}
article.sentence h1 {
	font-family: 'Pressura Var', 'Maru Var', sans-serif;
	font-variation-settings: "wght" 490, "wdth" 110, "ital" 0.15;
	font-size: 1.7em;
	line-height: 1.5;
	font-weight: 550;
	letter-spacing: 0.0em;
	max-width: 57ch;
	text-align: center;
}
article.sentence img {
	height: 1em;
	width: 1em;
	display: inline;
	object-fit: contain;
	margin: 0 0.05em -0.15em;
}

article.sentence h1 span.expand {
	background: hsl(0, 0%, 89%);
	font-variation-settings: "wght" 550, "wdth" 110, "ital" 0.3;
	padding: 4px 8px 2px;
	border-radius: 6px;
	color: black;
	white-space: nowrap;
}
article.sentence h1 span.expansion {
	color: rgb(0, 0, 0);
	font-variation-settings: "wght" 550, "wdth" 110, "ital" 0.5;
	animation-name: expandIn;
	animation-duration: 500ms; 
}
@keyframes expandIn {
	0% { 
		opacity: 0; 
		color: rgb(0, 119, 255);
		background: hsl(0, 0%, 89%);  
	}
	50% { 
		opacity: 1; 
		color: rgb(0, 119, 255); 
		background: hsl(0, 0%, 89%, 60%);
	}
	100% { 
		opacity: 1; 
		color: black; 
		background: hsl(0, 0%, 89%, 0%);
	}
}
article.sentence h1 span.define {
	// text-decoration: underline;
	border-bottom: 2px dotted rgb(157, 157, 157);
}
article.sentence h1 span.definition {
	// display: none;
	border-bottom: 2px dotted rgb(157, 157, 157);
	color: rgb(86, 86, 86);
	font-variation-settings: "wght" 400, "wdth" 110, "ital" 0.5;
}
article.sentence button {
	border: none;
	background: none;
	cursor: cell;
	color: unset;
}

article.sentence > p {
	text-align: center;
	color: hsl(0, 0%, 43%);
	font-size: 1.05em;
	padding: 0.3em;
}
article.sentence div a {
	font-size: 1.1em;
	font-weight: 510;
	padding-top: 0.6em;
	color: black;
}
article.sentence div a:visited {
	color: black;
}
article.sentence div a:hover {
	color: hsl(213, 48%, 55%);
	transition: color 100ms ease-in-out;
}
article.sentence div a:active {
	color: hsl(186, 59%, 54%);
}
article.sentence div {
	display: flex;
	align-items: center;
	gap: 18px;
	justify-content: center;
}
/* The Sentence [End] */

/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Showcase Cards
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
main {
	// height: ;
	padding: 10px;
	display: flex;
	gap: 12px;
	overflow-y: scroll;
}
main div.card {
	height: 300px;
	width: 400px;
	max-width: 70vw;
	flex-shrink: 0;
	background-color: #3a7fd6;
	border-radius: 8px;
	display: flex;
	align-items: flex-end;
}
main div.container {
	height: 300px;
	width: 100%;
	position: relative;
}
main div p {
	color: white;
	font-size: 1.2em;
	font-weight: 550;
	padding: 0.6em 1em;
	position: sticky;
	bottom: 0;
}
/* Showcase Cards [End] */

/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Footer
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
div.footer {
	height: 370px;
	position: relative;
	width: 100%;
	padding-top: 90px;
}
div.footer > div.links {
	display: flex;
	flex-direction: row;
	gap: 27px;
	margin: auto;
	width: fit-content;
}
div.footer svg {
	height: 31px;
	width: 31px;
	color: #88adc4;
	fill: currentColor;
}
div.footer > div.links a:hover svg {
	color: #2172b9;
	transition: color 300ms;
}
div.footer picture, div.footer img {
	height: 90px;
	max-width: 100px;
}
#beach-ball {
	position: absolute;
	top: 80px;
	left: 12vw;
}
#pillar {
	position: absolute;
	top: 190px;
	right: 9vw;
}
#sun {
	position: absolute;
	top: 40px;
	right: 23vw;
}
/* ... */

